--- a/homePage.html
+++ b/homePage.html
@@ -15,7 +15,7 @@
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
+            <li><a href="products.html">Products</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Account</a></li>
@@ -27,10 +27,11 @@
     <div class="hero-text">
         <h1>Discover the Best Deals Online!</h1>
         <p>From fashion to gadgets, we’ve got it all. Shop your favorite items with ease and style.</p>
-        <a href="#" class="btn">Shop Now →</a>
+        <a href="products.html" class="btn">Shop Now →</a>
     </div>
 </section>
 
 </body>
 
 </html>
+
