--- a/homePage.html
+++ b/homePage.html
@@ -18,6 +18,7 @@
             <li><a href="products.html">Products</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
+            <li><a href="cart.html">Cart</a></li>
             <li><a href="#">Account</a></li>
         </ul>
     </nav>
@@ -34,4 +35,5 @@
 </body>
 
 </html>
+
 
