--- a/products.html
+++ b/products.html
@@ -10,114 +10,31 @@
 
 <header class="navbar">
     <div class="logo">MY<span>STORE</span></div>
-  <nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html" class="active">Products</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="cart.html">Cart</a></li>
-        <li><a href="#">Account</a></li>
-    </ul>
-  </nav>
-
+    <nav>
+        <ul>
+            <li><a href="homePage.html">Home</a></li>
+            <li><a href="products.html" class="active">Products</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="cart.html">Cart</a></li>
+            <li><a href="#">Account</a></li>
+        </ul>
+    </nav>
 </header>
 
 <main>
     <h1>Our Featured Products</h1>
 
-    <div class="products-grid">
-
-        <div class="product-card">
-            <img src="71n1OfJ92YL.jpg" alt="Smartphone" class="product-image" />
-            <div class="product-details">
-                <h2 class="product-name">Smartphone X100</h2>
-                <p class="product-description">Experience the latest technology with our powerful Smartphone X100.</p>
-                <div class="product-price">$799.99</div>
-                <a href="buy_now.html?id=1" class="btn-buy">Buy Now</a>
-
-
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="shopping.webp" alt="Wireless Headphones" class="product-image" />
-            <div class="product-details">
-                <h2 class="product-name">Wireless Headphones Pro</h2>
-                <p class="product-description">Enjoy crystal clear sound with no wires to hold you back.</p>
-                <div class="product-price">$199.99</div>
-                <a href="buy_now.html?id=2" class="btn-buy">Buy Now</a>
-
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="download (1).jpeg" alt="Fitness Tracker" class="product-image" />
-            <div class="product-details">
-                <h2 class="product-name">FitTrack Plus</h2>
-                <p class="product-description">Keep track of your health and fitness goals with this sleek tracker.</p>
-                <div class="product-price">$129.99</div>
-              <a href="buy_now.html?id=3" class="btn-buy">Buy Now</a>
-
-
-
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="download.jpeg" alt="Smart Watch" class="product-image" />
-            <div class="product-details">
-                <h2 class="product-name">SmartWatch Ultra</h2>
-                <p class="product-description">Stay connected and stylish with the SmartWatch Ultra.</p>
-                <div class="product-price">$349.99</div>
-              <a href="buy_now.html?id=4" class="btn-buy">Buy Now</a>
-
-
-
-            </div>
-        </div>
-
-        <div class="product-card">
-        <img src="shopping (1).webp" alt="High Performance Laptop" class="product-image" />
-        <div class="product-details">
-            <h2 class="product-name">Laptop Pro 15</h2>
-            <p class="product-description">
-                Ultra-fast performance, 15-inch display, powerful CPU and GPU for creators and gamers.
-            </p>
-            <div class="product-price">$1,299.99</div>
-           <a href="buy_now.html?id=5" class="btn-buy">Buy Now</a>
-
-
-        </div>
+    <div class="products-grid" id="products-grid">
+       
     </div>
-
-    <div class="product-card">
-        <img src="download (2).jpeg" alt="4K Professional Camera" class="product-image" />
-        <div class="product-details">
-            <h2 class="product-name">4K Camera Pro</h2>
-            <p class="product-description">
-                Capture stunning images and videos with this 4K professional camera.
-            </p>
-            <div class="product-price">$899.99</div>
-           <a href="buy_now.html?id=6" class="btn-buy">Buy Now</a>
-
-
-
-        </div>
-    </div>
-
-
-
-    </div>
-
-    
 </main>
 
 <footer>
     &copy; 2025 MyStore. All rights reserved.
 </footer>
 
-<script src="script.js"></script>
+<script src="product.js"></script>
 
 </body>
 </html>
